--- a/docs/partner_editable/_settings.adoc
+++ b/docs/partner_editable/_settings.adoc
@@ -5,7 +5,7 @@
 :doc-month: March
 :doc-year: 2021
 //:partner-contributors: John Doe and Jane Doe - {partner-company-name}
-:quickstart-contributors: AWS Quick Start team
+:quickstart-contributors: Dave May, AWS Quick Start team
 :deployment_time: 30 minutes
 :default_deployment_region: us-east-1
 :parameters_as_appendix:
