--- a/docs/deployment_guide/partner_editable/_settings.adoc
+++ b/docs/deployment_guide/partner_editable/_settings.adoc
@@ -1,15 +1,15 @@
-:partner-solution-project-name: partner-solution-repo-name
+:partner-solution-project-name: quickstart-amazon-aurora-mysql
 :partner-solution-github-org: aws-quickstart
-:partner-product-name: Full Product Name
-:partner-product-short-name: Product Name
-:partner-company-name: Example Company Name, Ltd.
-:doc-month: January
-:doc-year: 2023
-:partner-contributors: John Smith, {partner-company-name}
+:partner-product-name: Amazon Aurora MySQL Database
+:partner-product-short-name: Aurora MySQL
+// :partner-company-name: Example Company Name, Ltd.
+:doc-month: March
+:doc-year: 2021
+// :partner-contributors: John Smith, {partner-company-name}
 // :other-contributors: Akua Mansa, Trek10
-:aws-contributors: Janine Singh, AWS IoT Partner team
-:aws-ia-contributors: Toni Jones, AWS Integration & Automation team
-:deployment_time: 15 minutes
+:aws-contributors: Arabinda Pani, AWS PSA Database Specialist team
+:aws-ia-contributors: Dave May, AWS Integration and Automation team
+:deployment_time: 30 minutes
 :default_deployment_region: us-east-1
 // :private_repo:
 
