--- a/docs/deployment_guide/partner_editable/pre_deployment.adoc
+++ b/docs/deployment_guide/partner_editable/pre_deployment.adoc
@@ -1,3 +1,14 @@
-//Include any predeployment steps here, such as signing up for a Marketplace AMI or making any changes to a partner account. If there are no predeployment steps, leave this file empty.
 
 == Predeployment steps
+
+==== Requirements for deploying Aurora into an existing VPC
+
+If you plan to deploy Aurora into an existing VPC, check the following:
+
+* Your VPC must have two private subnets in different Availability Zones for the database
+instances. This Partner Solution does not support https://docs.aws.amazon.com/vpc/latest/userguide/vpc-sharing.html[shared subnets^].
+* To download packages and software without exposing instances to the internet, the private subnets require https://docs.aws.amazon.com/vpc/latest/userguide/vpc-nat-gateway.html[NAT gateways^] in their route tables.
+* The domain name must be configured in the Dynamic Host Configuration Protocol (DHCP) options. For more information, see https://docs.aws.amazon.com/vpc/latest/userguide/VPC_DHCP_Options.html[DHCP options sets^].
+* You must have a Linux bastion host to run the tests discussed in the link:#_test_the_deployment[Test the deployment] section. To install the bastion host, launch the https://github.com/aws-quickstart/quickstart-linux-bastion/blob/main/templates/linux-bastion.template[AWS CloudFormation template^] that we provide for an existing subnet. When you launch the Partner Solution, you are prompted for your VPC settings.
+
+If you don’t have an existing VPC that satisfies these requirements, use the new-VPC deployment option so that the Partner Solution builds a VPC for you in addition to deploying {partner-product-short-name}.
